# bap_test

./: README.md  pyproject.toml  responses.csv  test.py
bap_eval/: __init__.py  model_wrapper.py  report.py  runner.py  scoring.py
bap_eval/datasets/: default_prompts.py  demographics.py  prompt_dataset.py
bap_eval/metrics/: accuracy.py  bias.py  politeness.py
code/: BAP_test.py  bias_test.py
code/outputs/: bap_ollama_run_20251005T192015Z.csv  bap_ollama_run_20251005T192015Z.jsonl  bap_ollama_run_20251005T210943Z.csv  bap_ollama_run_20251005T210943Z.jsonl  bap_ollama_run_20251005T214349Z.csv  bap_ollama_run_20251005T214349Z.jsonl  bap_ollama_run_20251005T221537Z.csv  bap_ollama_run_20251005T221537Z.jsonl  bap_ollama_run_20251005T230617Z.csv  bap_ollama_run_20251005T230617Z.jsonl  lookup.py
code/polite_test/: polite_guard.py
code/polite_test/polite_score/: scored.csv  scored_age_group.csv  scored_disability.csv  scored_religion.csv  scored_socioeconomic.csv
code/results/: gaps_vs_baseline.csv  log.txt  raw_responses.csv  summary_by_key.csv
code/results/gender/: gaps_vs_baseline.csv  raw_responses.csv  summary_by_key.csv
