[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bap-eval"
version = "0.1.0"
description = "Bias, Accuracy, and Politeness evaluation framework for LLMs"
authors = [
    { name="placeholder", email="placeholder@email.com" }
]
dependencies = [
    "transformers>=4.44.0",   # Hugging Face
    "torch>=2.0",             # backend for HF models
    "openai>=1.0.0",          # for OpenAI API
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bap_eval*"]