[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bap-eval"
version = "0.1.0"
description = "Bias, Accuracy, and Politeness evaluation framework for LLMs"
requires-python = ">=3.8"
authors = [
    { name="placeholder", email="placeholder@email.com" }
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["llm", "evaluation", "bias", "accuracy", "politeness"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = [
    "transformers>=4.44.0,<5.0",
    "torch>=2.0,<3.0",
    "openai>=1.0.0,<2.0",
    "requests>=2.25.0",
    "tqdm>=4.66.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bap_eval*"]